Updated home repo and set locale.

--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -33,7 +33,10 @@ ENV HISTFILE /home/.bash_history/history
 # cache for this RUN command whenever we want to update this repo.
 RUN git clone https://github.com/themattrix/home.git \
     && cd /home \
-    && git checkout c0d530a
+    && git checkout 0da74b1
+
+# Set locale
+RUN locale-gen en_US.UTF-8 && /usr/sbin/update-locale LANG=en_US.UTF-8
 
 RUN echo 'source ~/.bashrc' >> /home/.bash_profile
 
