--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -15,16 +15,11 @@ RUN add-apt-repository -y ppa:ultradvorka/ppa
 RUN apt-get update \
     && apt-get -y install \
         iptables ca-certificates lxc apt-transport-https \
-        tmux git vim htop socat man ruby hh bash-completion \
-        curl python-pygments vim-youcompleteme \
+        tmux git vim htop socat man ruby bash-completion \
+        curl python-pygments vim-youcompleteme python-pip \
+        sshfs \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Can't live without rainbow-colored output
-RUN gem install lolcat
-
-# Install Rust and Cargo
-RUN curl https://raw.githubusercontent.com/rust-lang/rust/9106546aa7d56dcaf650d9bc03fe5b5c3cf3460d/src/etc/rustup.sh | bash
 
 # Change the home directory of the root user to /home
 ENV HOME /home
@@ -40,7 +35,7 @@ ENV HISTFILE /home/.bash_history/history
 # cache for this RUN command whenever we want to update this repo.
 RUN git clone https://github.com/themattrix/home.git \
     && cd /home \
-    && git checkout 7e65c56
+    && git checkout 47d3ff0
 
 # Set locale
 RUN locale-gen en_US.UTF-8 && /usr/sbin/update-locale LANG=en_US.UTF-8
@@ -50,6 +45,16 @@ RUN echo 'source ~/.bashrc' >> /home/.bash_profile
 # Add fig: "Fast, isolated development environments using Docker"
 RUN wget -O /usr/local/bin/fig https://github.com/docker/fig/releases/download/1.0.1/fig-`uname -s`-`uname -m` \
     && chmod +x /usr/local/bin/fig
+
+# Fuzzy history utility. Seems nicer than hh.
+RUN git clone https://github.com/junegunn/fzf.git /home/.fzf \
+    && (yes | /home/.fzf/install)
+
+# Can't live without rainbow-colored output
+RUN gem install lolcat
+
+# Interactive grep is pretty nice too!
+RUN pip install percol
 
 ADD https://raw.githubusercontent.com/junegunn/vim-plug/0.5.7/plug.vim \
     /home/.vim/autoload/plug.vim
